src/styles/global.scss
@use './variables' as *;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  font-family: $font-sans;
  background-color: $color-background;
  color: $color-text;
  line-height: 1.6;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $font-display;
  font-weight: 600;
  letter-spacing: -0.02em;
  color: $color-text;
  margin-bottom: $spacing-4;
}

a {
  color: $color-primary;
  text-decoration: none;
  
  &:hover {
    text-decoration: underline;
  }
}

button {
  font-family: inherit;
  cursor: pointer;
  border: none;
  background: none;
}

img {
  max-width: 100%;
  display: block;
}

.container {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 $spacing-4;
  
  @media (min-width: $breakpoint-md) {
    padding: 0 $spacing-8;
  }
}

